--- a/Test app/Base.lproj/Main.storyboard
+++ b/Test app/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,108 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Test_app" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Itp-43-fNw">
+                                <rect key="frame" x="0.0" y="-44" width="375" height="755"/>
+                                <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="Tcs-aI-krU">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7I2-6T-Plw" userLabel="TopView">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="221.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="snu-Yh-JJz">
+                                                <rect key="frame" x="11.5" y="84.5" width="352" height="113"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="352" id="OuU-Ll-ngv"/>
+                                                    <constraint firstAttribute="height" constant="113" id="kEa-cJ-zrq"/>
+                                                </constraints>
+                                                <string key="text">Image
+Dimensions</string>
+                                                <fontDescription key="fontDescription" name="AcademyEngravedLetPlain" family="Academy Engraved LET" pointSize="45"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="snu-Yh-JJz" firstAttribute="centerX" secondItem="7I2-6T-Plw" secondAttribute="centerX" id="P4X-Cb-ITB"/>
+                                            <constraint firstItem="snu-Yh-JJz" firstAttribute="centerY" secondItem="7I2-6T-Plw" secondAttribute="centerY" constant="30.25" id="qUy-vC-8pv"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gYz-lm-mag" userLabel="MiddleView">
+                                        <rect key="frame" x="0.0" y="222.5" width="375" height="222"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dimensions" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ME2-d1-GIO">
+                                                <rect key="frame" x="-4" y="8" width="383" height="206"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="383" id="PTr-QD-xXE"/>
+                                                    <constraint firstAttribute="height" constant="206" id="wcT-Nx-hmt"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="40"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="ME2-d1-GIO" firstAttribute="centerX" secondItem="gYz-lm-mag" secondAttribute="centerX" id="DGD-4p-HCz"/>
+                                            <constraint firstItem="ME2-d1-GIO" firstAttribute="centerY" secondItem="gYz-lm-mag" secondAttribute="centerY" id="pNg-fS-0cP"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iyx-v2-A0i" userLabel="BottomView">
+                                        <rect key="frame" x="0.0" y="445.5" width="375" height="221.5"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="70" translatesAutoresizingMaskIntoConstraints="NO" id="Kpd-OL-JjQ">
+                                                <rect key="frame" x="52.5" y="60.5" width="270" height="100"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ka1-MG-GWU">
+                                                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                        <state key="normal" image="icons8-camera-100">
+                                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default"/>
+                                                        </state>
+                                                    </button>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="84S-6H-gWH">
+                                                        <rect key="frame" x="170" y="0.0" width="100" height="100"/>
+                                                        <state key="normal" image="icons8-paper-plane-100">
+                                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default"/>
+                                                        </state>
+                                                    </button>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="Kpd-OL-JjQ" firstAttribute="centerY" secondItem="iyx-v2-A0i" secondAttribute="centerY" id="NgV-yb-aCf"/>
+                                            <constraint firstItem="Kpd-OL-JjQ" firstAttribute="centerX" secondItem="iyx-v2-A0i" secondAttribute="centerX" id="gBM-QO-9BL"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="Itp-43-fNw" secondAttribute="bottom" constant="-44" id="5Fl-Yx-GBd"/>
+                            <constraint firstItem="Tcs-aI-krU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="B4f-uj-WvK"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Tcs-aI-krU" secondAttribute="bottom" id="IaA-eE-C0K"/>
+                            <constraint firstItem="Itp-43-fNw" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="-44" id="UeS-bn-s5S"/>
+                            <constraint firstItem="Itp-43-fNw" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" id="gsy-bO-4MP"/>
+                            <constraint firstItem="Itp-43-fNw" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="ljZ-qD-P2V"/>
+                            <constraint firstItem="Tcs-aI-krU" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="r2d-jQ-gld"/>
+                            <constraint firstItem="Tcs-aI-krU" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="uJC-cY-j64"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.875" y="98.239436619718305"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="icons8-camera-100" width="100" height="100"/>
+        <image name="icons8-paper-plane-100" width="100" height="100"/>
+    </resources>
 </document>
